--- a/html/Copernicium/Snapshot.html
+++ b/html/Copernicium/Snapshot.html
@@ -159,10 +159,10 @@
 
           
           <div class="method-source-code" id="new-source">
-            <pre><span class="ruby-comment"># File lib/repos.rb, line 31</span>
+            <pre><span class="ruby-comment"># File lib/repos.rb, line 36</span>
 <span class="ruby-keyword">def</span> <span class="ruby-identifier">initialize</span>(<span class="ruby-identifier">files</span> = [])
-  <span class="ruby-ivar">@files</span> = <span class="ruby-identifier">files</span>
-  <span class="ruby-ivar">@id</span> = <span class="ruby-identifier">id</span>
+  <span class="ruby-identifier">@@files</span> = <span class="ruby-identifier">files</span>
+  <span class="ruby-identifier">@@id</span> = <span class="ruby-identifier">id</span>
 <span class="ruby-keyword">end</span></pre>
           </div>
           
